Thu Aug  3 10:05:53 2000  Akiko Matsushita <matusita@sra.co.jp>

	* gengenrtl.c, rtl.c: Avoid #elif.

2000-08-03  Michael Poole  <poole@troilus.org>

        * tm.texi (Register Classes): Clarify order of sub-initializers
        in REG_CLASS_CONTENTS.

Thu Aug  3 15:53:03 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	From SAITOH Masanobu:
	* sh.h (ASM_OUTPUT_REG_PUSH): Fix syntax.

2000-08-03  David Billinghurst  <David.Billinghurst@riotinto.com.au>

	* config/i386/cygwin.h: Remove -remap from CPP_SPEC since this option
	is not supported by tradcpp and isn't actually needed for cygwin.

2000-08-03  Kazu Hirata  <kazu@hxi.com>

	* h8300.c: Fix a comment typo.
	* h8300.h (OK_FOR_U): Accept a 32-bit constant address on H8/S.

	* jump.c: Fix formatting.

	* toplev.c: Fix formatting.

Thu Aug  3 01:05:32 2000  Jeffrey A Law  (law@cygnus.com)

	* flow.c (find_auto_inc): Verify that we've got a REG before
	peeking at its regno.  Fail, don't abort if we can't find
	the increment of the desired register.

	* pa.md (shadd height reduction patterns/splitters): Remove.

2000-08-02  Jim Wilson  <wilson@cygnus.com>

	* config/ia64/ia64-protos.h (flag_ssa): Declare.
	* config/ia64/ia64.md (movti_internal, movti_internal+1): New.

2000-08-02  Mark Mitchell  <mark@codesourcery.com>

	* dce.c: Remove all uses of assert.
	* dwarf2out.c: Likewise.
	* dwarfout.c: Likewise.
	* ssa.c: Likewise.

2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>

	* gcc.h (lang_specific_driver): Constify second argument.
	* gcc.c (translate_options, process_command, main): Likewise.
	Constify variables to match.  Cast second argument to
	pexecute.

	* cppspec.c, gccspec.c: Adjust type of second argument to
	lang_specific_driver, and update code as necessary.

2000-08-02  Jakub Jelinek  <jakub@redhat.com>

	* loop.c (scan_loop): Ensure update_end label does not
	go away until reg_scan_update is run.

2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
